# FantomWizard

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
CreateFantomModule/: CMakeLists.txt  CreateFantomModule.py
CreateFantomModule/Resources/Data/: _lookup_table.json
CreateFantomModule/Resources/Data/1ts/: _morph_lookup_table.json
CreateFantomModule/Resources/Data/1ts/fantom_base/: adrenal_glands.glb  air_upper_airways_sinuses.glb  blood.glb  bone_cortex.glb  bone_marrow.glb  cns.glb  colon.glb  colon_content.glb  esophagus.glb  esophagus_lumen.glb  eyeballs.glb  gallbladder.glb  gallbladder_content.glb  kidneys.glb  liver.glb  lungs.glb  myocard.glb  pancreas.glb  parotid_glands.glb  soft_tissues.glb  spleen.glb  stomach_and_small_intestine.glb  stomach_and_small_intestine_content.glb  submandibular_glands.glb  thyroid_gland.glb  urinary_bladder.glb  urinary_bladder_content.glb  uterus_myometrium.glb
CreateFantomModule/Resources/Data/1ts/fantom_scaled_down/: adrenal_glands.glb  air_upper_airways_sinuses.glb  blood.glb  bone_cortex.glb  bone_marrow.glb  cns.glb  colon.glb  colon_content.glb  esophagus.glb  eyeballs.glb  (+18 more)
CreateFantomModule/Resources/Data/2ts_head/: _morph_lookup_table.json
CreateFantomModule/Resources/Data/3ts/: _morph_lookup_table.json
CreateFantomModule/Resources/Data/SegmentationPresets/: All.json  Default.json
CreateFantomModule/Resources/UI/: BlendSegmentationsTab.ui  CreateFantomModule.ui  SegmentationToFantomTab.ui
helpers/: blender_gltf_export_batch.py  build_weight_morph_lookup_table.py
(+324 files in other folders)
